--- a/client/src/app/components/comment/comment.html
+++ b/client/src/app/components/comment/comment.html
@@ -1,7 +1,7 @@
 <div class="d-flex align-items-start mb-4 ">
 	<img [src] = "comment.author?.imgUrl" width="40" height="40" class="rounded-circle me-2" />
 	<div class = "flex-column">
-		<div class="mb-1 p-2 bg-light rounded-3">
+		<div class="mb-1 p-2 comment-bubble rounded-3">
 			<strong> {{ comment.author?.username }} </strong>
 			<p class="mb-1 text-break">
 				{{ comment.content }}
