--- a/client/src/app/components/footer/footer.html
+++ b/client/src/app/components/footer/footer.html
@@ -4,7 +4,7 @@
       <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
         <h5 class="text-uppercase fw-bold">FLUX</h5>
         <p class="text-muted">
-          Share your thoughts and connect through posts and comments in a minimal, clean social experience.
+         dont wait , dive deep in ,share your thoughs
         </p>
       </div>
 
